# Dispersive_XAS

./: .gitattributes  .gitignore  DXAS_batch_new.py  README.md  __init__.py  analysis.py  batch.py  calibration.py  crystal.py  image_processing.py  io.py  preprocessing.py  progress.py  pyproject.toml  spectrum.py  utils.py  visualization.py  xas.py
batch/: __init__.py  config.py  pipeline.py
core/: __init__.py  _display.py  analysis.py  batch.py  calibration.py  crystal.py  h5io.py  image_processing.py  preprocessing.py  roi.py  spectrum.py  standards.py  utils.py
core/data_io/: __init__.py  bluesky.py  nexus.py  processed.py  savers.py
docs/: API_REFERENCE.md  WORKFLOWS.md
example/: .gitignore  20260227_analysis.py  README.md
tests/: test_roi.py
web/: __init__.py  batch.py  plotting.py  roi.py
